fix: alignment issues with the wishlist header context menu button

--- a/client/src/pages/Wishlist/Wishlist.css
+++ b/client/src/pages/Wishlist/Wishlist.css
@@ -32,7 +32,7 @@ main {
           }
 
           & > button {
-            @apply mt-[-1rem] mr-[-1rem] p-1 bg-dark rounded-[50%] transition-[filter] hover:brightness-75 cursor-pointer;
+            @apply mt-[-1rem] mr-[-1.2rem] p-1 bg-dark rounded-[50%] transition-[filter] hover:brightness-75 cursor-pointer flex justify-center items-center;
 
             &.open {
               svg {
